WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310767
HTMLPreloadScanner should not preload stylesheets with the disabled attribute
https://bugs.webkit.org/show_bug.cgi?id=310767
Summary
HTMLPreloadScanner should not preload stylesheets with the disabled attribute
Ahmad Saleem
Reported
2026-03-25 21:17:55 PDT
ssia - more alignment with other browsers -
https://html.spec.whatwg.org/multipage/parsing.html#speculative-html-parsing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-25 21:18:03 PDT
<
rdar://problem/173378582
>
Ahmad Saleem
Comment 2
2026-03-25 21:19:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61374
EWS
Comment 3
2026-04-22 09:23:30 PDT
Committed
311776@main
(f92d19110cc3): <
https://commits.webkit.org/311776@main
> Reviewed commits have been landed. Closing PR #61374 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug